--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -31,7 +31,7 @@
 	<div class="login slide-up">
 		<div class="center">
 			<h2 class="form-title" id="login">Pas de compte ?</h2>
-			<button style="height:50px;" class="submit-btn">Créer un compte</button>
+			<button style="height:50px;" class="submit-btn"><a href="http://172.20.177.77/lilian31/public/register">Créer un compte</a></button>
 			<button class="submit-btn">Mot de passe oublié ?</button>
 		</div>
 	</div>
