--- a/templates/professionnel/ajouter.html.twig
+++ b/templates/professionnel/ajouter.html.twig
@@ -1,23 +1,11 @@
 {% extends 'base.html.twig' %}
-
 {% block content %}
-<style>
-.formulaire-ajout {
-    margin-top: 20px;
-    margin-left: 20px;
-    border-radius: 30px;
-    background-color: red;
-    height: 400px;
-    width:400px;
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-}
 
-</style>
 <div class="formulaire-ajout">
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <button type="submit" class="btn btn-success">Valider</button>
     {{ form_end(form) }}
 </div>
+
 {% endblock %}
