--- a/templates/inscription/ajouter.html.twig
+++ b/templates/inscription/ajouter.html.twig
@@ -1,4 +1,9 @@
-{# templates/etudiant/ajouter.html.twig #}
+{% extends 'base.html.twig' %}
+
+{% block content %}
+
 {{ form_start(form) }}
 {{ form_widget(form) }}
 {{ form_end(form) }}
+
+{% endblock %}
